fixed margin on mobile

--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -330,7 +330,7 @@ li {
     
     .userFeed {
         margin: auto;
-        width: 100%;
+        width: 95%;
     }
 
     .ui.card {
